# justrans

./: .gitignore  Cargo.toml  README.md  build.rs
assets/ui/: app-window.slint
assets/web/: index.html
config/: settings.yaml  settings.yaml.example
src/: config.rs  main.rs
src/models/: file.rs  mod.rs
src/server/: file_server.rs  mod.rs
src/utils/: mod.rs  qrcode.rs
tests/: system_tests.rs
utils/logger/: Cargo.toml
utils/logger/src/: lib.rs
utils/qrcode/: Cargo.toml
utils/qrcode/src/: lib.rs
utils/settings/: Cargo.toml
utils/settings/src/: lib.rs
utils/settings_derive/: Cargo.toml
utils/settings_derive/src/: lib.rs
utils/settings_derive/tests/: macro_tests.rs
utils/settings_manager/: Cargo.toml
utils/settings_manager/src/: lib.rs
