[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "justrans"
version.workspace = true
authors = ["Wormarz <wormarz@outlook.com>"]
license = "Apache"
description = "An easy-to-use file exchanger."
homepage = ""
repository = ""
readme = "README.md"
edition.workspace = true

[workspace.dependencies]
log = "0.4.22"
anyhow = "1.0.95"
slint = "1.8.0"
axum = { version = "0.7.4", features = ["multipart", "macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
local-ip-address = "0.6.1"
image = "0.24.9"
mime_guess = "2.0.4"
uuid = { version = "1.7.0", features = ["v4"] }
rfd = "0.14.0"
open = "3.2.0"

[dependencies]
qrcode = {path = "./utils/qrcode"}
logger = {path = "./utils/logger"}
settings = {path = "./utils/settings", features = ["derive"]}
once_cell = "1.19.0"
env_logger = "0.11.6"
slint = { workspace = true, features = ["std"] }
log.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
local-ip-address.workspace = true
image.workspace = true
mime_guess.workspace = true
uuid.workspace = true
rfd.workspace = true
open.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10.1"

[build-dependencies]
slint-build = "1.8.0"

[[bin]]
name = "justrans"
bench = false
path = "src/main.rs"

[profile.release]
panic = "abort"
strip = true
lto = true

[workspace]
members = ["utils/qrcode", "utils/logger", "utils/settings", "utils/settings_derive"]
